app/styles/components.css
:root {
	--widget-padding: 1.5rem 2rem;
}

.task-search {
	position: relative;
}

.task-search button[type=submit] {
	cursor: pointer;
	color: inherit;
	background: transparent;
	vertical-align: middle;
	display: inline-block;
	border: 0;
	padding: 0.5em;
	position: absolute;
	transform: translate(-3.25em, 0.25em);
}

.task-search-input {
	padding: 1em;
	border-radius: 3em;
	background: linear-gradient(90deg, #544e81, #635c96);
	border: none;
	transition: 0.5s ease padding;
	width: 65%;
	max-width: 35em;
	min-width: 9em;
}

.task-search-label {
	position: absolute;
	top: 0.5em;
	text-indent: 1em;
}

.task-search-label + .task-search-input:focus, .task-search.has-value .task-search-input {
	padding-top: 2.5em;
}

.user-container {
	display: flex;
	align-items: center;
	margin: 1em 0 0.5em 0;
	padding: var(--sidebar-padding);
}

.user-avatar {
	margin-right: 1em;
	margin-left: 0.3em;
	border-radius: 50%;
}

.user-role {
	display: block;
}

.task-progress {
	display: flex;
	align-items: center;
}

.task-progress-progress, .task-progress-meta {
	width: 100%;
}

.task-progress-meta {
	display: flex;
	justify-content: space-between;
	margin: 0;
}

.task-progress-meta dd:first-of-type {
	flex: 1;
}

.task-progress-meta dt + dd {
	margin-left: 0.5em;
}

.task-progress-meta dt:after {
	content: ":";
}

.task-progress-meta dd {
	margin: 0;
	font-weight: 600;
}

.task-progress-container {
	flex: 1;
}

.task-progress-heading {
	margin: 0 0 1em 0;
	font-size: 1.1em;
}

.task-progress-time {
	font-size: 1.3em;
	text-transform: uppercase;
	margin-right: 2rem;
	font-weight: 600;
	display: inline-block;
	text-align: center;
}

.day, .month {
	display: block;
}

.day {
	font-size: 1.8em;
}

.widget {
	border-radius: 1.25em;
	background: linear-gradient(90deg, #4e3c6e, #40395f);
	box-sizing: border-box;
	padding: var(--widget-padding);
	margin: 2em;
}

.dashboard-widget-count {
	background-color: var(--accent-colour3);
	border-radius: 50%;
	box-shadow: 0 0.4em 0.5em 0 rgba(0, 0, 0, 0.25);
	padding: 0.5em 0.9em;
	vertical-align: middle;
	margin: 0 0.5em;
}

.dashboard-widget-header {
	background-color: var(--accent-colour2);
	margin: -1.5rem -2rem;
	padding: var(--widget-padding);
	border-top-left-radius: inherit;
	border-top-right-radius: inherit;
	box-sizing: border-box;
}

.dashboard-widget-header + * {
	margin-top: 1.5rem;
}

.dashboard-widget-heading {
	margin: 0;
	font-size: 1em;
	text-transform: uppercase;
}


.task-timeline-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.task-timeline-heading {
	font-size: 1.3em;
	text-transform: uppercase;
}

.task-timeline-filters {
	list-style: none;
	margin: 0;
	padding: 0;
}

.task-timeline-filter {
	display: inline-block;
}

.task-timeline-filter + .task-timeline-filter {
	margin-left: 1em;
}
.task-timeline-filter svg {
	display: inline-block;
	vertical-align: middle;
}

.task-timeline-filter:nth-child(2) svg {
	fill: #9e3cd7;
}

.task-timeline-filter:nth-child(3) svg {
	fill: var(--accent-colour3);
}

.task-timeline-filter:nth-child(4) svg {
	fill: var(--primary-colour);
}

.task-timeline-filter label {
	cursor: pointer;
	transition: 0.2s ease opacity;
	opacity: 0.7;
}

.task-timeline-filter input:checked + label {
	font-weight: 600;
	opacity: 1;
}

.tasks {
	margin: 0;
	padding: 0;
	list-style: none;
}

.task {
	margin: 1em 0;
}

.task-item {
	display: flex;
	justify-content: space-between;
	align-items: center;
	border-left: 0.1em solid rgba(138, 151, 188, 0.33);
	padding: 0 0 0 0.5em;
	position: relative;
}

.task-item:before {
	content: "■";
	position: absolute;
	top: -1em;
	left: -0.5em;
	color: var(--accent-colour);
	transition: 0.2s ease color;
}

.task-item.complete:before {
	color: rgba(138, 151, 188, 0.33);
}

.complete .task-container {
	opacity: 0.6;
}

.task-description {
	opacity: 0.8;
}

.task-container {
	transition: 0.2s ease opacity;
	flex: 1;
}

.task-actions {
	padding: 0;
	margin: 0;
	list-style: none;
}

.is-editing .task-actions {
	position: absolute;
	top: 1em;
	right: 1em;
}

.is-editing .form-field-control:first-of-type {
	padding-right: 7em;
}

.is-editing .task-action {
	opacity: 0.6;
	filter: grayscale(100%);
}

.is-editing .task-action:hover {
	opacity: 1;
}

.is-editing .task-action > * {
	background-color: transparent;
	color: white;
	font-size: 0.9em;
}

.task-action {
	display: inline-block;
	vertical-align: middle;
	transition: 0.3s ease opacity, 0.3s ease filter;
}

.task-action + .task-action {
	margin-left: 0.5em;
}

.task-title {
	font-size: 1em;
}

.task-action > * {
	border-radius: 50%;
	border: 0;
	padding: 0.5em 0.25em;
	box-sizing: border-box;
	cursor: pointer;
	background-color: rgba(138, 151, 188, 0.33);
	display: block;
	font-size: 0.65em;
	transition: 0.2s ease background-color, 0.2s ease color;
}

.task-action svg {
	height: 1em;
}

.task-item-complete-toggle {
	color: #161616;
}

.task-item-edit-toggle {
	cursor: pointer;
}

.task-item-edit-icon {
	opacity: 0;
	transition: 0.2s ease opacity;
	height: 1em;
	font-size: 0.85em;
	display: inline-block;
	margin: 0 0.25em;
}

.task-item-edit-toggle:hover .task-item-edit-icon {
	opacity: 1;
}

.task-item-edit-toggle:hover {
	text-decoration: underline;
}

.complete .task-item-complete-toggle {
	background-color: var(--colour2);
	color: inherit;
}

.task-item-comment-action {
	background-color: var(--colour3);
	color: inherit;
}

.add-task-button {
	background: transparent;
	border: 0;
	color: inherit;
	cursor: pointer;
	font-size: 1em;
}

.add-task-button svg {
	display: inline-block;
	vertical-align: middle;
	margin-right: 0.3em;
	fill: var(--accent-colour);
	height: 1em;
}

.message-sender-container {
	text-align: center;
	margin-right: 1em;
}

.messages {
	padding: 0;
	list-style: none;
}

.message-item {
	display: flex;
	align-items: center;
	padding: 1.5em 0;
}

.message-sender-image {
	max-height: 5em;
	border-radius: 50%;
}

.message-item-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
}

.message-from-name {
	margin: 0;
	flex: 1;
}

.message-meta {
	margin: 0;
	opacity: 0.85;
}

.message-meta dd {
	margin: 0;
}

.message-actions {
	list-style: none;
	padding: 0;
}

.message-action {
	margin: 0 1em;
}

.message-action button {
	border: 0;
	padding: 0.3em 0.2em;
	border-radius: 50%;
	color: inherit;
	background-color: var(--colour3);
}

.message-action button svg {
	height: 1em;
}

.message-select-toggle {
	width: 100%;
}

